cmake_minimum_required(VERSION 3.6)
project(game)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp Postac.cpp Funkcje.cpp LVL.cpp)
add_executable(game ${SOURCE_FILES} )

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL REQUIRED sdl)
PKG_SEARCH_MODULE(SDLIMAGE REQUIRED SDL_image>=1.2.0)
PKG_SEARCH_MODULE(SDLMIXER REQUIRED SDL_mixer)
PKG_SEARCH_MODULE(SDLTTF REQUIRED SDL_ttf)

INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIRS} ${SDLIMAGE_INCLUDE_DIRS} ${SDLMIXER_INCLUDE_DIRS} ${SDLTFF_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL_LIBRARIES} ${SDLIMAGE_LIBRARIES} ${SDLMIXER_LIBRARIES} ${SDLTTF_LIBRARIES})